--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Tactical Training Team</title>
   <link href='https://fonts.googleapis.com/css?family=Ubuntu:100,400' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Rubik:100,400' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
   
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -17,7 +18,26 @@
 <div class="wrapper">
 <img src="img/ttt-symbol.png" class="center" width="50%" height="50%" alt="TTT-Logo"></img><br>
   <h1>Mission failed</h1>
-  <p>Hier gibt es nichts zu sehen. #Erstmal Waesche aufhaengen.</p>
+  <h2>404 Error</h2>
+  <p>
+  <script>
+		var r_text = new Array ();
+		r_text[0] = "Weitere Seiten müssen per 5 Liner von der Logistik angefordert werden.";
+		r_text[1] = "Sie betreten unbefugtes Gebiet!";
+		r_text[2] = "Bei Einbruch der Nacht ist mit Dunkelheit zu rechnen";
+		r_text[3] = "Beim Erreichen der Baumspitze hat der Soldat die Kletterbewegungen selbstständig einzustellen.";
+		r_text[4] = "Wir müssen die Mission neustarten. Jemand hat vergessen in einer Zeusmission einen Zeus einzubauen";
+		r_text[5] = "Ranger kommen mit Strykern in dein Ghetto und kaufen dir deine Caprisonnen weg.";
+		r_text[6] = "Von nichts kommt nichts. Und dann bist du halt unter den Einäugigen der Blinde.";
+		r_text[7] = "Entweder du fällst um oder du kippst weiter.";
+		r_text[8] = "Die Mission war wie Toastbrot. Es hat satt gemacht aber war nicht befriedigend";
+
+		var i = Math.floor(r_text.length * Math.random());
+
+		document.write(r_text[i]);
+
+	</script>
+  </p>
   <div class="buttons"><a href="https://tacticalteam.de">Webseite</a><a href="https://forum.tacticalteam.de">Forum</a></div>
 </div>
 <!-- partial -->
