rdm anpassung design

--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
 		var r_text = new Array ();
 		r_text[0] = "Weitere Seiten müssen per 5 Liner von der Logistik angefordert werden.";
 		r_text[1] = "Sie betreten unbefugtes Gebiet!";
-		r_text[2] = "Bei Einbruch der Nacht ist mit Dunkelheit zu rechnen";
+		r_text[2] = "Bei Einbruch der Nacht ist mit Dunkelheit zu rechnen.";
 		r_text[3] = "Beim Erreichen der Baumspitze hat der Soldat die Kletterbewegungen selbstständig einzustellen.";
-		r_text[4] = "Wir müssen die Mission neustarten. Jemand hat vergessen in einer Zeusmission einen Zeus einzubauen";
+		r_text[4] = "Wir müssen die Mission neustarten. Jemand hat vergessen in einer Zeusmission einen Zeus einzubauen.";
 		r_text[5] = "Ranger kommen mit Strykern in dein Ghetto und kaufen dir deine Caprisonnen weg.";
 		r_text[6] = "Von nichts kommt nichts. Und dann bist du halt unter den Einäugigen der Blinde.";
 		r_text[7] = "Entweder du fällst um oder du kippst weiter.";
-		r_text[8] = "Die Mission war wie Toastbrot. Es hat satt gemacht aber war nicht befriedigend";
+		r_text[8] = "Die Mission war wie Toastbrot. Es hat satt gemacht aber war nicht befriedigend.";
+		r_text[9] = "Du musst lauter sprechen, ich seh' nichts!";
 
 		var i = Math.floor(r_text.length * Math.random());
 
 		document.write(r_text[i]);
 
 	</script>
+	<br><br>#TTT-Spruch
   </p>
   <div class="buttons"><a href="https://tacticalteam.de">Webseite</a><a href="https://forum.tacticalteam.de">Forum</a></div>
 </div>
